Added home section to html

--- a/index.html
+++ b/index.html
@@ -70,6 +70,32 @@
         </nav>
     </header>
 
+    <!-- HOME -->
+    <section class="home section" id="home">
+        <div class="home__container container grid">
+            <div class="home__data">
+                <h1 class="home__title">
+                    New Clothing <br>
+                    Collection
+                </h1>
+
+                <p class="home__description">
+                    The new collection of clothing from <br>
+                    the best brands this year.
+                </p>
+
+                <a href="#new" class="button__link">
+                    Explore <i class="ri-arrow-right-line"></i>
+                </a>
+            </div>
+
+            <div class="home__images">
+                <img src="images/home1.png" alt="home image">
+                <img src="images/home2.png" alt="home image">
+            </div>
+        </div>
+    </section>
+
     <!-- SCROLL UP -->
 
 
