--- a/index.html
+++ b/index.html
@@ -96,6 +96,66 @@
         </div>
     </section>
 
+    <!-- NEW -->
+    <section class="new section" id="new">
+        <h2 class="section__title">
+            New Categories
+        </h2>
+
+        <div class="new__container container grid">
+            <article class="new__card">
+                <img src="images/new1.png" alt="new image" class="new__img">
+
+                <a href="#" class="new__link">
+                    <div class="new__data">
+                        <h2 class="new__title">
+                            Hoodie & Sweatshirt
+                        </h2>
+                        <span class="new__subtitle">
+                            Winter collection
+                        </span>
+                    </div>
+
+                    <i class="ri-arrow-right-line"></i>
+                </a>
+            </article>
+
+            <article class="new__card">
+                <img src="images/new2.png" alt="new image" class="new__img">
+
+                <a href="#" class="new__link">
+                    <div class="new__data">
+                        <h2 class="new__title">
+                            Pants & Jackets
+                        </h2>
+                        <span class="new__subtitle">
+                            Winter collection
+                        </span>
+                    </div>
+
+                    <i class="ri-arrow-right-line"></i>
+                </a>
+            </article>
+
+            <article class="new__card">
+                <img src="images/new3.png" alt="new image" class="new__img">
+
+                <a href="#" class="new__link">
+                    <div class="new__data">
+                        <h2 class="new__title">
+                            Coats & Coat Sets
+                        </h2>
+                        <span class="new__subtitle">
+                            Winter collection
+                        </span>
+                    </div>
+
+                    <i class="ri-arrow-right-line"></i>
+                </a>
+            </article>
+        </div>
+    </section>
+
     <!-- SCROLL UP -->
 
 
