--- a/index.html
+++ b/index.html
@@ -156,6 +156,39 @@
         </div>
     </section>
 
+    <!-- COLLECTION -->
+    <section class="collection section" id="collection">
+        <div class="collection__container container">
+            <div class="collection__explore">
+                <div class="collection__data-men">
+                    <h2 class="collection__title">
+                        Men <br>
+                        Collection
+                    </h2>
+                    <a href="#" class="button__link">
+                        Explore Clothes <i class="ri-arrow-right-line"></i>
+                    </a>
+                </div>
+
+                <img src="images/collection1.png" alt="collection image">
+            </div>
+
+            <div class="collection__explore">
+                <div class="collection__data-men">
+                    <h2 class="collection__title">
+                        Women <br>
+                        Collection
+                    </h2>
+                    <a href="#" class="button__link">
+                        Explore Clothes <i class="ri-arrow-right-line"></i>
+                    </a>
+                </div>
+
+                <img src="images/collection2.png" alt="collection image">
+            </div>
+        </div>
+    </section>
+
     <!-- SCROLL UP -->
 
 
