--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
             </div>
 
             <div class="collection__explore">
-                <div class="collection__data-men">
+                <img src="images/collection2.png" alt="collection image">
+
+                <div class="collection__data-women">
                     <h2 class="collection__title">
                         Women <br>
                         Collection
@@ -183,8 +185,6 @@
                         Explore Clothes <i class="ri-arrow-right-line"></i>
                     </a>
                 </div>
-
-                <img src="images/collection2.png" alt="collection image">
             </div>
         </div>
     </section>
