Added swiper html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
     <!-- SWIPER CSS -->
-
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
@@ -251,7 +251,7 @@
 
 
     <!-- SWIPER JS -->
-
+    <script src="js/swiper-bundle.min.js"></script>
 
     <!-- MAIN JS -->
     <script src="js/app.js"></script>
