Added swiper html

--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
             Best Products
         </h2>
 
-        <div class="products__container container">
-            <div>
-                <article class="products__card">
+        <div class="products__container container swiper">
+            <div class="swiper-wrapper">
+                <article class="products__card swiper-slide">
                     <img src="images/product1.png" alt="product image" class="products__img">
 
                     <h2 class="products__title">
@@ -208,7 +208,7 @@
                     </span>
                 </article>
 
-                <article class="products__card">
+                <article class="products__card swiper-slide">
                     <img src="images/product2.png" alt="product image" class="products__img">
 
                     <h2 class="products__title">
@@ -219,7 +219,7 @@
                     </span>
                 </article>
 
-                <article class="products__card">
+                <article class="products__card swiper-slide">
                     <img src="images/product3.png" alt="product image" class="products__img">
 
                     <h2 class="products__title">
@@ -230,7 +230,7 @@
                     </span>
                 </article>
 
-                <article class="products__card">
+                <article class="products__card swiper-slide">
                     <img src="images/product4.png" alt="product image" class="products__img">
 
                     <h2 class="products__title">
@@ -240,6 +240,14 @@
                         $69.99
                     </span>
                 </article>
+            </div>
+
+            <div class="swiper-button-next">
+                <i class="ri-arrow-right-line"></i>
+            </div>
+
+            <div class="swiper-button-prev">
+                <i class="ri-arrow-left-line"></i>
             </div>
         </div>
     </section>
