--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+
     <!-- HEADER -->
     <header class="header" id="header">
         <nav class="nav container">
@@ -70,187 +71,204 @@
         </nav>
     </header>
 
-    <!-- HOME -->
-    <section class="home section" id="home">
-        <div class="home__container container grid">
-            <div class="home__data">
-                <h1 class="home__title">
-                    New Clothing <br>
-                    Collection
-                </h1>
-
-                <p class="home__description">
-                    The new collection of clothing from <br>
-                    the best brands this year.
-                </p>
-
-                <a href="#new" class="button__link">
-                    Explore <i class="ri-arrow-right-line"></i>
-                </a>
-            </div>
-
-            <div class="home__images">
-                <img src="images/home1.png" alt="home image">
-                <img src="images/home2.png" alt="home image">
-            </div>
-        </div>
-    </section>
-
-    <!-- NEW -->
-    <section class="new section" id="new">
-        <h2 class="section__title">
-            New Categories
-        </h2>
-
-        <div class="new__container container grid">
-            <article class="new__card">
-                <img src="images/new1.png" alt="new image" class="new__img">
-
-                <a href="#" class="new__link">
-                    <div class="new__data">
-                        <h2 class="new__title">
-                            Hoodie & Sweatshirt
-                        </h2>
-                        <span class="new__subtitle">
-                            Winter collection
-                        </span>
-                    </div>
-
-                    <i class="ri-arrow-right-line"></i>
-                </a>
-            </article>
-
-            <article class="new__card">
-                <img src="images/new2.png" alt="new image" class="new__img">
-
-                <a href="#" class="new__link">
-                    <div class="new__data">
-                        <h2 class="new__title">
-                            Pants & Jackets
-                        </h2>
-                        <span class="new__subtitle">
-                            Winter collection
-                        </span>
-                    </div>
-
-                    <i class="ri-arrow-right-line"></i>
-                </a>
-            </article>
-
-            <article class="new__card">
-                <img src="images/new3.png" alt="new image" class="new__img">
-
-                <a href="#" class="new__link">
-                    <div class="new__data">
-                        <h2 class="new__title">
-                            Coats & Coat Sets
-                        </h2>
-                        <span class="new__subtitle">
-                            Winter collection
-                        </span>
-                    </div>
-
-                    <i class="ri-arrow-right-line"></i>
-                </a>
-            </article>
-        </div>
-    </section>
-
-    <!-- COLLECTION -->
-    <section class="collection section" id="collection">
-        <div class="collection__container container">
-            <div class="collection__explore">
-                <div class="collection__data-men">
-                    <h2 class="collection__title">
-                        Men <br>
+    <!-- MAIN -->
+    <main class="main">
+        <!-- HOME -->
+        <section class="home section" id="home">
+            <div class="home__container container grid">
+                <div class="home__data">
+                    <h1 class="home__title">
+                        New Clothing <br>
                         Collection
-                    </h2>
-                    <a href="#" class="button__link">
-                        Explore Clothes <i class="ri-arrow-right-line"></i>
+                    </h1>
+
+                    <p class="home__description">
+                        The new collection of clothing from <br>
+                        the best brands this year.
+                    </p>
+
+                    <a href="#new" class="button__link">
+                        Explore <i class="ri-arrow-right-line"></i>
                     </a>
                 </div>
 
-                <img src="images/collection1.png" alt="collection image">
-            </div>
-
-            <div class="collection__explore">
-                <img src="images/collection2.png" alt="collection image">
-
-                <div class="collection__data-women">
-                    <h2 class="collection__title">
-                        Women <br>
-                        Collection
-                    </h2>
-                    <a href="#" class="button__link">
-                        Explore Clothes <i class="ri-arrow-right-line"></i>
-                    </a>
+                <div class="home__images">
+                    <img src="images/home1.png" alt="home image">
+                    <img src="images/home2.png" alt="home image">
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- PRODUCTS -->
-    <section class="products section" id="products">
-        <h2 class="section__title">
-            Best Products
-        </h2>
+        <!-- NEW -->
+        <section class="new section" id="new">
+            <h2 class="section__title">
+                New Categories
+            </h2>
 
-        <div class="products__container container swiper">
-            <div class="swiper-wrapper">
-                <article class="products__card swiper-slide">
-                    <img src="images/product1.png" alt="product image" class="products__img">
+            <div class="new__container container grid">
+                <article class="new__card">
+                    <img src="images/new1.png" alt="new image" class="new__img">
 
-                    <h2 class="products__title">
-                        Gotland black Jacket
-                    </h2>
-                    <span class="products__price">
-                        $124.99
-                    </span>
+                    <a href="#" class="new__link">
+                        <div class="new__data">
+                            <h2 class="new__title">
+                                Hoodie & Sweatshirt
+                            </h2>
+                            <span class="new__subtitle">
+                                Winter collection
+                            </span>
+                        </div>
+
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
                 </article>
 
-                <article class="products__card swiper-slide">
-                    <img src="images/product2.png" alt="product image" class="products__img">
+                <article class="new__card">
+                    <img src="images/new2.png" alt="new image" class="new__img">
 
-                    <h2 class="products__title">
-                        Black Sports Shorts
-                    </h2>
-                    <span class="products__price">
-                        $34.99
-                    </span>
+                    <a href="#" class="new__link">
+                        <div class="new__data">
+                            <h2 class="new__title">
+                                Pants & Jackets
+                            </h2>
+                            <span class="new__subtitle">
+                                Winter collection
+                            </span>
+                        </div>
+
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
                 </article>
 
-                <article class="products__card swiper-slide">
-                    <img src="images/product3.png" alt="product image" class="products__img">
+                <article class="new__card">
+                    <img src="images/new3.png" alt="new image" class="new__img">
 
-                    <h2 class="products__title">
-                        Knox Quilted Jacket
-                    </h2>
-                    <span class="products__price">
-                        $97.99
-                    </span>
-                </article>
+                    <a href="#" class="new__link">
+                        <div class="new__data">
+                            <h2 class="new__title">
+                                Coats & Coat Sets
+                            </h2>
+                            <span class="new__subtitle">
+                                Winter collection
+                            </span>
+                        </div>
 
-                <article class="products__card swiper-slide">
-                    <img src="images/product4.png" alt="product image" class="products__img">
-
-                    <h2 class="products__title">
-                        Blue Sport Pants
-                    </h2>
-                    <span class="products__price">
-                        $69.99
-                    </span>
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
                 </article>
             </div>
+        </section>
 
-            <div class="swiper-button-next">
-                <i class="ri-arrow-right-line"></i>
-            </div>
+        <!-- COLLECTION -->
+        <section class="collection section" id="collection">
+            <div class="collection__container container">
+                <div class="collection__explore">
+                    <div class="collection__data-men">
+                        <h2 class="collection__title">
+                            Men <br>
+                            Collection
+                        </h2>
+                        <a href="#" class="button__link">
+                            Explore Clothes <i class="ri-arrow-right-line"></i>
+                        </a>
+                    </div>
 
-            <div class="swiper-button-prev">
-                <i class="ri-arrow-left-line"></i>
+                    <img src="images/collection1.png" alt="collection image">
+                </div>
+
+                <div class="collection__explore">
+                    <img src="images/collection2.png" alt="collection image">
+
+                    <div class="collection__data-women">
+                        <h2 class="collection__title">
+                            Women <br>
+                            Collection
+                        </h2>
+                        <a href="#" class="button__link">
+                            Explore Clothes <i class="ri-arrow-right-line"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+
+        <!-- PRODUCTS -->
+        <section class="products section" id="products">
+            <h2 class="section__title">
+                Best Products
+            </h2>
+
+            <div class="products__container container swiper">
+                <div class="swiper-wrapper">
+                    <article class="products__card swiper-slide">
+                        <img src="images/product1.png" alt="product image" class="products__img">
+
+                        <h2 class="products__title">
+                            Gotland black Jacket
+                        </h2>
+                        <span class="products__price">
+                            $124.99
+                        </span>
+                    </article>
+
+                    <article class="products__card swiper-slide">
+                        <img src="images/product2.png" alt="product image" class="products__img">
+
+                        <h2 class="products__title">
+                            Black Sports Shorts
+                        </h2>
+                        <span class="products__price">
+                            $34.99
+                        </span>
+                    </article>
+
+                    <article class="products__card swiper-slide">
+                        <img src="images/product3.png" alt="product image" class="products__img">
+
+                        <h2 class="products__title">
+                            Knox Quilted Jacket
+                        </h2>
+                        <span class="products__price">
+                            $97.99
+                        </span>
+                    </article>
+
+                    <article class="products__card swiper-slide">
+                        <img src="images/product4.png" alt="product image" class="products__img">
+
+                        <h2 class="products__title">
+                            Blue Sport Pants
+                        </h2>
+                        <span class="products__price">
+                            $69.99
+                        </span>
+                    </article>
+                </div>
+
+                <div class="swiper-button-next">
+                    <i class="ri-arrow-right-line"></i>
+                </div>
+
+                <div class="swiper-button-prev">
+                    <i class="ri-arrow-left-line"></i>
+                </div>
+            </div>
+        </section>
+
+        <!-- BRANDS -->
+        <section class="brand section">
+            <h2 class="section__title">
+                Brands We Sell
+            </h2>
+
+            <div class="brand__container container grid">
+                <img src="images/logo1.png" alt="logo image" class="brand__img">
+                <img src="images/logo2.png" alt="logo image" class="brand__img">
+                <img src="images/logo3.png" alt="logo image" class="brand__img">
+                <img src="images/logo4.png" alt="logo image" class="brand__img">
+            </div>
+        </section>
+    </main>
 
     <!-- SCROLL UP -->
 
