--- a/index.html
+++ b/index.html
@@ -368,7 +368,9 @@
     </footer>
 
     <!-- SCROLL UP -->
-
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="ri-arrow-up-line"></i>
+    </a>
 
     <!-- SCROLL REVEAL -->
 
