Added dark theme css and function

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
 
             <!-- THEME CHANGE BUTTON -->
-            <i class="ri-moon-line"></i>
+            <i class="ri-moon-line change-theme" id="theme-button"></i>
         </nav>
     </header>
 
