--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
     </a>
 
     <!-- SCROLL REVEAL -->
-
+    <script src="js/scrollreveal.min.js"></script>
 
     <!-- SWIPER JS -->
     <script src="js/swiper-bundle.min.js"></script>
